2009-10-15  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Dave Hyatt.

        Test that shorthand name is not null for
        background-repeat-x, background-repeat-y, background-position-x,
        background-position-y, -webkit-mask-position-x, -webkit-mask-position-y,
        -webkit-mask-repeat-x, -webkit-mask-repeat-y.

        https://bugs.webkit.org/show_bug.cgi?id=28972

        * fast/backgrounds/repeat/background-repeat-shorthand-expected.txt: Added.
        * fast/backgrounds/repeat/background-repeat-shorthand.html: Added.
        * fast/backgrounds/repeat/resources/background-repeat-shorthand.css: Added.
        * fast/backgrounds/repeat/resources/background-repeat-shorthand.js: Added.
        (getShorthand):

2009-10-14  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Adam Barth.

        [HTML5] Add document.head
        https://bugs.webkit.org/show_bug.cgi?id=30232

        * fast/dom/document-head-expected.txt: Added.
        * fast/dom/document-head.html: Added.
        * fast/dom/script-tests/document-head.js: Added.

2009-10-14  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        [XSSAuditor] Add an exception for local files
        https://bugs.webkit.org/show_bug.cgi?id=30352

        Test that we allow sites to load scripts from their own domain as long
        as they don't use query strings.

        * http/tests/security/xssAuditor/script-tag-with-source-same-host-expected.txt: Added.
        * http/tests/security/xssAuditor/script-tag-with-source-same-host-with-query-expected.txt: Added.
        * http/tests/security/xssAuditor/script-tag-with-source-same-host-with-query.html: Added.
        * http/tests/security/xssAuditor/script-tag-with-source-same-host.html: Added.

2009-10-14  Darin Adler  <darin@apple.com>

        Fix a failure seen on buildbot after landing the fix for
        https://bugs.webkit.org/show_bug.cgi?id=18994
