@@ -1,3 +1,13 @@
+2009-10-15  Shu Chang  <Chang.Shu@nokia.com>
+
+        Reviewed by Adele Peterson.
+
+        Anchor elements should be mouse focusable regardless isLink flag.
+        https://bugs.webkit.org/show_bug.cgi?id=26856
+
+        * html/HTMLAnchorElement.cpp:
+        * html/HTMLAnchorElement.h:
+
 2009-10-15  Nikolas Zimmermann  <nzimmermann@rim.com>
 
         Not reviewed. Sort XCode project file.
